Fix selected cases jumping to the right a bit in the ui

--- a/resources/public/css/squanmate_style.css
+++ b/resources/public/css/squanmate_style.css
@@ -56,9 +56,11 @@ table.parity-count-analysis td {
     padding-right: 10px;
 }
 
+.selected-wrapper {
+    padding: 2px 5px;
+    display: inline;
+}
 .selected-wrapper.selected-case {
     background-color: lightgray;
     border-radius: 10px;
-    display: inline;
-    padding: 2px;
 }
